--- a/css/beermenter2.css
+++ b/css/beermenter2.css
@@ -72,16 +72,6 @@ div.brewery img {
 img.beer {
   cursor: pointer;
 }
-#filter {
-	max-width: 17%;
-	max-height: 17%;
-	position: fixed;
-	margin-right: 1em;
-	margin-bottom: 1em;
-	bottom: 0;
-	right: 0;
-  cursor: pointer;
-}
 .figcaption {
   line-height: 2.5ex;
   height: 7.5ex; /* 2.5ex for each visible line */
@@ -107,12 +97,14 @@ figcaption {
 body {
 	background-color: #252735;
 	color: white;
+  margin: 0px;
 }
 body.beer-body {
 	margin: 0;
 	padding: 0;
   padding-bottom: 32px;
   margin-top: 59px;
+  margin-bottom: 50px;
 }
 a {
 	color: white;
@@ -321,7 +313,8 @@ select option {
 }
 
 .brewery-body {
-  padding: 8px;
+  padding: 0px 16px;
+  padding-bottom: 82px;
 }
 
 .div-btn {
@@ -404,4 +397,57 @@ img.logo {
   height: 27px;
   cursor: pointer;
   transition: 0.3s;
+}
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 0px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: BrixSansMedium;
+    width: 50%;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+/* Add a color to the active/current link */
+.navbar a.active {
+    background-color: #D8844F;
+    color: white;
+}
+#filter {
+  max-width: 17%;
+  max-height: 17%;
+  position: fixed;
+  margin-right: 1em;
+  margin-bottom: 1em;
+  bottom: 50px;
+  right: 0;
+  cursor: pointer;
+}
+
+.logout-btn {
+  background-image: linear-gradient(to right, #FFC900 , #D8844F);
+  text-align: center;
+  padding: 10px;
+  margin: 0px 60px;
+  color: white;
+  font-family: BrixSansMedium;
+  font-size: 17px;
+  font-weight: normal;
+  border-radius: 4px;
 }
