--- a/css/beermenter2.css
+++ b/css/beermenter2.css
@@ -399,7 +399,7 @@ img.logo {
   transition: 0.3s;
 }
 .navbar {
-    background-color: #333;
+    background-image: linear-gradient(to right, #FFC900 , #D8844F);
     overflow: hidden;
     position: fixed;
     bottom: 0;
@@ -411,6 +411,7 @@ img.logo {
     float: left;
     display: block;
     color: #f2f2f2;
+    background-color: #333;
     text-align: center;
     padding: 14px 0px;
     text-decoration: none;
@@ -419,14 +420,9 @@ img.logo {
     width: 50%;
 }
 
-/* Change the color of links on hover */
-.navbar a:hover {
-    background-color: #ddd;
-    color: black;
-}
 /* Add a color to the active/current link */
 .navbar a.active {
-    background-color: #D8844F;
+    background-color: transparent;
     color: white;
 }
 #filter {
